# kmr

./: .gitignore  CMakeLists.txt  Readme.md
shaders/: triangle.frag  triangle.vert
src/: first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  kmr_camera.cpp  kmr_camera.hpp  kmr_device.cpp  kmr_device.hpp  kmr_game_object.cpp  kmr_game_object.hpp  kmr_model.cpp  kmr_model.hpp  kmr_pipeline.cpp  kmr_pipeline.hpp  kmr_renderer.cpp  kmr_renderer.hpp  kmr_swap_chain.cpp  kmr_swap_chain.hpp  kmr_utils.hpp  kmr_window.cpp  kmr_window.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp
